Fix alignment issues

--- a/style.css
+++ b/style.css
@@ -56,7 +56,33 @@ section#portfolio {
   margin: 50px 0;
 }
 
+
 /* === Section: contact === */
 section#contact {
   margin: 35px 0;
+}
+
+section::before { 
+  display: block; 
+  content: " "; 
+  margin-top: -50px; 
+  height: 50px; 
+  visibility: hidden; 
+  pointer-events: none;
+}
+
+.skill-lists {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  border: 1px solid #ccc;
+}
+
+.skill-lists li {
+  padding: 10px 5px;
+  border-bottom: 1px solid #ccc;
+}
+
+.skill-lists li:last-child {
+  border-bottom: none;
 }
